less文件的处理

--- a/02_projectBuild/webpack_test/src/less/test1.less
+++ b/02_projectBuild/webpack_test/src/less/test1.less
@@ -1,8 +1,9 @@
 #box1 {
   width: 100px;
   height: 100px;
-  background: pink;
+  background-color: pink;
   display: flex;
+  background-image: url('../images/1.png');
   p {
     color: saddlebrown;
     font-size: 25px;
