--- a/02_projectBuild/webpack_test/src/less/test2.less
+++ b/02_projectBuild/webpack_test/src/less/test2.less
@@ -1,9 +1,10 @@
 #box2 {
   width: 200px;
   height: 200px;
-  background: deeppink;
+  background-color: deeppink;
+  background-image: url('../images/2.png');
   p {
     color: yellowgreen;
-    font-style: 15px;
+    font-size: 15px;
   }
 }
